# CalmCadence

./: README.md
.github/workflows/: main.yml  snake.yml
CalmCadence.App/: App.xaml  Package.appxmanifest
OneDrive/Desktop/ARBYS/: README.md  pyproject.toml  version.txt
OneDrive/Desktop/ARBYS/gui/: account_manager_dialog.py  api_provider_dialog.py  main_window.py  setup_wizard.py  tachometer_widget.py  theme_utils.py  ui_firstday_slideshow.py
OneDrive/Desktop/ARBYS/src/: account_health.py  account_health_cache.py  account_manager.py  arbitrage.py  arbitrage_optimized.py  data_orchestrator_enhanced.py  stake_calculator.py
OneDrive/Desktop/ARBYS/src/api_providers/: api_sports.py  base.py  sofascore_scraper.py
OneDrive/Desktop/ARBYS/src/data_storage/: historical_data.py
OneDrive/Desktop/ARBYS/src/metadata_providers/: sports_open_data.py  thesportsdb.py
OneDrive/Desktop/ARBYS/src/signals/: injury_signal.py
OneDrive/Desktop/ARBYS/tests/: conftest.py  test_concurrency.py  test_integrity.py  test_performance.py  test_regression.py
OneDrive/Desktop/glsl/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
OneDrive/Desktop/glsl/notes/: CONTROLS.md
OneDrive/Desktop/glsl/src/: cli.rs  constants.rs  lib.rs  main.rs
OneDrive/Desktop/glsl/src/app/: audio.rs  input.rs  mod.rs  rendering.rs  status_bar.rs
OneDrive/Desktop/glsl/src/params/: shader_params.rs
OneDrive/Desktop/glsl/src/shader/: pipeline.rs  uniforms.rs
OneDrive/Desktop/glsl/src/shader_common/: beat_distortion.wgsl  effects.wgsl  main.wgsl  uniforms.wgsl
OneDrive/Desktop/glsl/src/utils/: color.rs
(+57 files in other folders)
