[package]
name = "chroma"
version = "0.1.0"
edition = "2021"

[dependencies]
# GPU/Graphics
wgpu = "22.1"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Terminal/UI
crossterm = "0.28"

# Audio (optional feature)
cpal = { version = "0.15", optional = true }
rustfft = { version = "6.2", optional = true }

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
flume = "0.11"
rand = "0.8"
unicode-width = "0.1"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
notify = "6.1"
dirs = "5.0"

[dev-dependencies]
criterion = "0.5"
pollster = { version = "0.3", features = ["macro"] }

[features]
default = []
audio = ["cpal", "rustfft"]

[[bin]]
name = "chroma"
path = "src/main.rs"

[lib]
name = "chroma"
path = "src/lib.rs"
